css/styles.css
/******************************
Main Styles
*******************************/

main {
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.column {
    width: 90%;
    height: 100%;
}

body {
    margin: 10px;
    padding: 0;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    background-color: lightgray;
}

nav {
    height: 15%;
    max-height: 200px;
    display: flex;
    flex-direction: column;
}

form {
    max-width: 300px;
    margin: 10px auto;
    padding: 10px 20px;
    background: #f4f7f8;
    border-radius: 8px;
  }
  
@media screen and (min-width: 800px) {
    main {
        flex-direction: row;
        justify-content: space-between;
    }
    nav {
        flex-direction: row;
        justify-content: flex-end;
    }
    .item1 {
        margin-right: 1rem;
    }
    .item2 {
        margin-right: 1rem;
    }
    .item3 {
        margin-right: 1rem;
    }
}

@media screen and (max-width: 1500px) {
    
}
/******************************
Flexbox Layout
*******************************/

/*.header, 
nav,
fieldset {
    display: flex;
    flex-direction: column;
}



@media all and (min-width: 640px) {
    .header, 
    nav {
        flex-direction: row;
    }
    form {
        max-width: 480px;
      }
    
}

@media all and (min-width: 1030px) {
    nav {
        justify-content: space-around;
    }
} */



/*.container {
    display: grid;
    grid-template-columns: 150px 150px 150px;
    grid-template-rows: 150px 150px;
    grid-gap: 1rem;
  } */

